--- a/tasma/user-manager/help/en/main_help.html
+++ b/tasma/user-manager/help/en/main_help.html
@@ -19,29 +19,21 @@
 User manager can be used to add, delete or
 modify a user on Pardus. After the application 
 starts, two tabs show the users and groups. 
-In order to add a new user, do the 
-following:
+In order to add a new user, do the following:
 
 <p>
 
 <ol>
-<li>"Ekle" düğmesine tıklayın
-<li>Karşınıza gelen pencerede kullanıcı adı (örnek: Ahmet Kızılbörek) 
-ve parolasını girin
-<li>Giriş yapacak kullanıcı adını tanımlayın (örnek: ahmet)
-<li>Bu kullanıcının yapabileceği işlemleri sağdaki pencereden sçin
-<li>"Ekle" düğmesine tıklayarak kullanıcıyı ekleyin
+<li>Click on "Add".
+<li>Enter the user name (i.e John Doe) and password.
+<li>Define the username (i.e john).
+<li>Select what actions this user will be allowed to do on the right pane.
+<li>Click on "Add" - the user will be added to the system.
 </ol>
 
 <p>
 
-Bu aşamada eklenen kullanıcı listede görüntülenecektir. 
-
-<p>
-
-Bir kullanıcıyı silmek için kullanıcı üzerine tıkladıktan sonra 
-"Sil" düğmesine tıklamak yeterlidir.
- 
+In order to delete a user, just click on "Delete" after choosing the user from the list.
 
 </body>
 </html>
