--- a/CD-image-version-2007.1/releasenotes-nl.html
+++ b/CD-image-version-2007.1/releasenotes-nl.html
@@ -2,15 +2,12 @@
 <html>
 <head>
 
-
-
-  <title>Pardus 2007 release notes</title>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<title>Pardus 2007 release notes</title>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
 
 
 <body>
-
 
 
 <h1>Pardus 2007 release notes</h1>
@@ -18,9 +15,7 @@
 
 
 
-
 <h2>1. Welkom bij Pardus 2007</h2>
-
 
 
 
@@ -39,7 +34,6 @@ behoeften.
 
 <h3>1.1 Feedback</h3>
 
-
 U kunt bugs.pardus.org.tr, oftewel het Pardus bug tracking system
 gebruiken om een bug in te sturen, een bug fix of elke suggestie
 aangaande Pardus. We willen u graag bedanken voor uw warme
@@ -51,9 +45,7 @@ volgende release. <br>
 
 
 
-
 <br>
-
 
 
 
@@ -65,10 +57,8 @@ te versturen over  Pardus via het Internet.
 
 
 
-
 Deze alinea beschrijft de features die komen  met Pardus 2007.
 <h3>2.1 Desktop gebruik (KDE 3.5.5)</h3>
-
 
 
 
@@ -85,15 +75,13 @@ KMail, Akregator, Kopete en KPDF.
 
 <h3>2.2 Communicatie en compatibiliteit met Windows</h3>
 
-
 Pardus 2007 is compatibel om samen te werken met andere
-besturingssystemen in een netwerk. Het kan harde schijven, printers en
+besturingssystemen in een network. Het kan hard disks, printers en
 andere drives, gedeeld in een windows omgeving, gebruiken. De
-harde schijven die gebruikt worden door Pardus 2007 kunnen op dezelfde
+hard disks die gebruikt worden door Pardus 2007 kunnen op dezelfde
 wijze worden gebruikt in een windows omgeving. 
 
 <h3>2.3 Java support</h3>
-
 
 De Sun Microsystems Java development omgeving wordt meegeleverd in de
 Pardus
@@ -104,7 +92,6 @@ de wereld.
 
 <h3>2.4 Games en amusement</h3>
 
-
 De vele games die werden meegeleverd bij Pardus 2007 geven u de
 gelegeheid uw tijd leuk door te brengen. Tevens kunt u door een
 paar klikken spellen downloaden uit de Pardus depots.
@@ -112,38 +99,28 @@ paar klikken spellen downloaden uit de Pardus depots.
 <h3>2.5 Netwerk gebruik</h3>
 
 
-
 Pardus kan worden gebruikt als service provider voor de genoemde network services hieronder.
 <ul>
 
 
-
   <li>File server (Met Samba software)</li>
-
 
   <li>Print server (Met  Cups software)</li>
 
-
   <li>Web server (Met  Apache software)</li>
-
 
   <li>E-mail server (Met  Postfix software)</li>
 
-
   <li>FTP server (Met  Vsftpd software)</li>
 
-
   <li>OpenLDAP server (Met  Openldap software)</li>
-
 
 </ul>
 
 
 
 
-
 <h2>3. Installatie benodigdheden</h2>
-
 
 
 
@@ -153,26 +130,19 @@ redelijke prestatie. De basis hardware onderdelen die er voor zorgen
 dat Pardus doorgaans prima werkt worden hier onder opgesomt.
 
 <ul>
-
-  <li>256 MB intern geheugen (beter is 512 MB)</li>
- 
-  <li>800 MHz Intel of AMD processor (advies minimaal 1200 MHz)</li>
-
-  <li>4 GB vrije hard disk ruimte</li>
-
+<li>256 MB intern geheugen (beter is 512 MB)</li> 
+<li>800 MHz Intel of AMD processor (advies minimaal 1200 MHz)</li>
+<li>4 GB vrije hard disk ruimte</li>
 </ul>
-
 
 
 
 <h2>4. Verbeteringen in deze versie</h2>
 
 
-
 De Pardus 2007 versie ziet het licht na een ontwikkelperiode van meer dan  6 maanden. Deze
 versie bevat de verbeteringen, hieronder opgesomd, gemaakt naar aanleiding van  feedback van eindgebruikers.
 <h3>4.1 Pardus firewall</h3>
-
 
 
 
@@ -187,7 +157,6 @@ bekijken.
 
 
 
-
 PiSi gebruikt nu het LZMA algoritme, wat als resultaat heeft een 30%
 snelheidsverbetering en u kunt meer programma's gebruiken. Met deze
 verbetering, PiSi
@@ -195,7 +164,6 @@ packages en de gedownloade software door eindgebruikers, verkleind in
 grootte, is het mogelijk meer software te leveren samen met Pardus 2007.
 
 <h3>4.3 De nieuwe software management interface</h3>
-
 
 
 
@@ -208,13 +176,11 @@ de-installatie en het eenvoudig en effectief updaten van programma's.
 
 
 
-
 In YALI zijn diverse bugs gefixed en het is nu geconfigureerd
 om samen te werken met  COMAR en PISI. Verder is de YALI interface
 gecallibreerd en voorzien van nieuwe kleuren.
 
 <h3>4.5 Het nieuwe en verbeterde Pardus startup system</h3>
-
 
 
 
@@ -230,9 +196,7 @@ afsluiting wanneer de computer stopt.
 
 
 
-
 <br>
-
 
 
 De broncode van het Pardus startup systeem is herschreven van de
@@ -248,20 +212,12 @@ het voordeel van ' parallel processing'  en een gemakklijk
 gebruik. Met deze verbetering:
 
 <ul>
-
-  <li>Een belangrijke tijdsbesparing in het boot en shutting down proces, </li>
-
-  <li>Pardus 2007 heeft een veel meer flexibele en makkelijk te onderhouden distributie door de kracht van Python. </li>
-
-  <li>Services zijn ontworpen en geprogrameerd met de mogelijkheid om
-beheerst te worden via de command prompt of heel gemakkelijk met TASMA.
-  </li>
-
+<li>Een belangrijke tijdsbesparing in het boot en shutting down proces, </li>
+<li>Pardus 2007 heeft een veel meer flexibele en makkelijk te onderhouden distributie door de kracht van Python. </li>
+<li>Services zijn ontworpen en geprogrameerd met de mogelijkheid om beheerst te worden via de command prompt of heel gemakkelijk met TASMA. </li>
 </ul>
 
-
 <h3>4.6 Meer hardware identificatie</h3>
-
 
 
 Het nieuwe hardware identificatie systeem, specifiek
@@ -275,9 +231,7 @@ het boot proces van het systeem. <br>
 
 
 
-
 <br>
-
 
 
 Het hardware identificatie systeem Muavin voorkomt het onnodig
@@ -289,14 +243,12 @@ wordt gebruikt voor dynamische 'device naming'.
 <h3>4.7 Meer dan 1200 bugs gerepareerd</h3>
 
 
-
 Meer dan 1200 bug reports gezonden naar het bug tracking system
 van Pardus zijn bekeken en nauwgezet verholpen door de
 ontwikkelaars zodat de release van 1.0 met een sterk en
 stabiel gebruiksvriendelijk systeem opleverde voor de gebruiker.
 
 <h3>4.8 Nieuwe 2.6.18 kernel</h3>
-
 
 
 De meeste hardware problemen zijn opgelost bij de 2.6.18
@@ -312,9 +264,7 @@ de IDE harddisks.
 
 
 
-
 <br>
-
 
 
 
@@ -325,9 +275,7 @@ Een paar van de nieuw ondersteunde harware :
 
 
 
-
   <li>Nieuwe SATA devices</li>
-
 
 
 
@@ -335,9 +283,7 @@ Een paar van de nieuw ondersteunde harware :
   <li>USB ADSL modems</li>
 
 
-
   <li>Verbeterde wireless network devices support</li>
-
 
 
 
@@ -347,15 +293,12 @@ Een paar van de nieuw ondersteunde harware :
 
 
 
-
 </ul>
 
 
 
 
-
 <h3>4.9 Nieuwe iconen</h3>
-
 
 
 Een van de meest gewardeerde en karakteriserende items was de 
@@ -369,11 +312,8 @@ applicaties en geeft je meer plezier met je desktop.
 
 
 
-
 <br>
-
 <h3>4.10 Vernieuwd gebruiker management programma</h3>
-
 
 
 Van af  2007, is "user-kga" veranderd in "user manager" wat kan
@@ -385,14 +325,12 @@ naar muziek en het spelen van spelletjes.
 <h3>4.11 Nieuwe applicatie: Service manager</h3>
 
 
-
 Een service manage programma wordt meegeleverd 2007 om gemakkelijk
 de server en de services te heren van en bij het booten. Met
 deze manager, worden de services opgestart tijdens het booten en
 verder wordt elke service gestart en gestopt als nodig.
 
 <h3>4.12 Software updates (xorg, gcc, ..)</h3>
-
 
 
 Met Pardus 2007, zijn veel bugs gefixed die verband hebben met 
@@ -410,7 +348,6 @@ verwacht voor de programa's.
 tools</h3>
 
 
-
 Skype is een complete IP telefoon oplossing dat gebruikt maakt van
 het  H.323 protocol.
 Je kunt bellen met met  Skype dat meegeleverd wordt
@@ -420,7 +357,6 @@ een video conferencie houden met andere gebruikers van en
 via Kopete.
 
 <h3>4.14 Meer localizatie support voor de Nederlandse taal</h3>
-
 Er zijn veel verbeteringen gemaakt in de Nederlandse localizatie support in
 OpenOffice.org, Firefox, Thunderbird, GNOME en KDE applicaties. Alle
 desktop applicaties kunnen in het Nederlands via deze verbeteringen. We
@@ -433,16 +369,13 @@ inspanningen.
 
 
 
-
 <br>
-
 
 
 
 
 <b>Nb: </b>Pardus 2007 is voorzien van support voor zowel in het Nederlands, Turks als het Engels.
 <h3>4.15 Niewe release OpenOffice.org 2.0.4</h3>
-
 
 
 Deze nieuwe release van OpenOffice.org bevat vele fixes en ook
@@ -458,7 +391,6 @@ compatibility in de database module.
 <h3>4.16 Niewe build farm</h3>
 
 
-
 Met Pardus 2007, worden alle voorbereide PISI packages
 klaargemaakt  in de  "farm hence"  zodat ze kunnen
 worden gedownload in een kortere tijd.
@@ -467,7 +399,6 @@ voorziet in processor power
 met een open toegang naar alle Pardus developers.
 
 <h2>5. Contact</h2>
-
 
 Bezoek de Pardus web page (www.pardus.org.tr/eng) voor meer informatie.
 </body>
